changing line 27 fixing theme issues in github pages

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ github_username:  fhpraw
 
 # Build settings
 markdown: kramdown
-theme: jekyll-whiteglass
+remote_theme: yous/whiteglass
+#theme: jekyll-whiteglass
 plugins:
   - jekyll-feed
   - jekyll-archives
