--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: public.fhp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Just write notes here ...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "fhpraw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fhpraw
 github_username:  fhpraw
 
@@ -26,8 +26,8 @@ github_username:  fhpraw
 markdown: kramdown
 # Uncomment theme for offline testing
 # Uncomment remote_theme for github pages
-# theme: jekyll-whiteglass
-remote_theme: yous/whiteglass
+theme: jekyll-whiteglass
+#remote_theme: yous/whiteglass
 plugins:
   - jekyll-feed
   - jekyll-archives
