--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ github_username:  fhpraw
 markdown: kramdown
 # Uncomment theme for offline testing
 # Uncomment remote_theme for github pages
-theme: jekyll-whiteglass
-#remote_theme: yous/whiteglass
+#theme: jekyll-whiteglass
+remote_theme: yous/whiteglass
 plugins:
   - jekyll-feed
   - jekyll-archives
