--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: nanimo wakaranai
 email: public.fhp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Just write notes here ...
+  Nanimo Wakaranai means, I don't know. I don't know what I am doing right now. I just
+  write some random logs that might be useful in the future. me, Fajar Hari Prabowo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "fhpraw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fhpraw
