--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: nanimo wakaranai
+title: fhpraw personal logs
 email: public.fhp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Nanimo Wakaranai means, I don't know. I don't know what I am doing right now. I just
-  write some random logs that might be useful in the future. me, Fajar Hari Prabowo.
+  I don't know what I am doing right now. I just write some random logs that might be useful in the future. me, Fajar Hari Prabowo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "fhpraw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fhpraw
